--- a/GoTCombine/Base.lproj/LaunchScreen.storyboard
+++ b/GoTCombine/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,14 +15,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Game Of Thrones iPhone 4S Wallpapers by Janaka86" translatesAutoresizingMaskIntoConstraints="NO" id="t7o-fW-nGm">
-                                <rect key="frame" x="-24" y="-114" width="422" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Game Of Thrones iPhone 4S Wallpapers by Janaka86" translatesAutoresizingMaskIntoConstraints="NO" id="VM2-4Z-9Oj">
+                                <rect key="frame" x="0.0" y="93.5" width="375" height="480"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VM2-4Z-9Oj" secondAttribute="trailing" id="Ige-4p-THT"/>
+                            <constraint firstItem="VM2-4Z-9Oj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RE8-Xr-QCE"/>
+                            <constraint firstItem="VM2-4Z-9Oj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="TOY-ng-DG9"/>
+                            <constraint firstItem="VM2-4Z-9Oj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xHZ-Dv-rEz"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -33,8 +36,5 @@
     </scenes>
     <resources>
         <image name="Game Of Thrones iPhone 4S Wallpapers by Janaka86" width="320" height="480"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
